# small-cap-stack

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  Makefile  README.md  bull-flag.md  canary.json  charts.json  docker-compose.yml  engine-v2.md  index.json  infra_state.json  notes.md  portfolio.json  published.json  pyproject.toml  stats.json  status.json
.claude/: settings.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
charts/: 2026-07-01.json  2026-07-02.json  2026-07-03.json  2026-07-04.json  2026-07-05.json  2026-07-06.json  2026-07-07.json  2026-07-08.json  2026-07-09.json  2026-07-10.json  2026-07-13.json  2026-07-14.json  2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json
deploy/: RUNBOOK.md  actions-runner-restart.conf  scs-backup.env.example  scs-backup.service  scs-backup.timer  setup-swap.sh  small-cap-stack.service
docs/: app.js  cockpit.css  index.html  portfolio.html  portfolio.js  results.html  results.js  review.html  review.js  style.css
research/: arch-storage-libs.md  broker-costs.md  bull-flag.md  decisions.md  engine-v2.md  entresys_light.md  findings-index.md  free-tier-services.md  github-automation.md  ibkr-integration.md  market-data-subscriptions.md  phase-2-roadmap.md  review-workbench-spec.md  strategy-validation.md  tradepilot.md
reviews/: 2026-07-01_ELTX_1.json  2026-07-01_ELTX_2.json  2026-07-01_FWDI_1.json  2026-07-01_FWDI_2.json  2026-07-01_VMAR.json  2026-07-02_AHMA.json  2026-07-02_ARCT.json  2026-07-02_AVXX_1.json  2026-07-02_AVXX_2.json  2026-07-02_CETX.json  2026-07-02_CLRO.json  2026-07-02_CLVT.json  2026-07-02_CMMB.json  2026-07-02_CONL.json  2026-07-02_CRCG.json  2026-07-02_CRMT.json  2026-07-02_CSTE.json  2026-07-02_CYH.json  2026-07-02_DFDV.json  2026-07-02_DJT.json  2026-07-02_DSY.json  2026-07-02_EDIT.json  2026-07-02_EHGO.json  2026-07-02_ETHT_1.json  2026-07-02_ETHT_2.json  2026-07-02_FWDI.json  2026-07-02_ILLR_1.json  2026-07-02_ILLR_2.json  2026-07-02_IPW.json  2026-07-02_IREZ.json  2026-07-02_ITRG.json  2026-07-02_JEM_1.json  2026-07-02_JEM_2.json  2026-07-02_LGCL.json  2026-07-02_MSTU.json  2026-07-02_MSTX_1.json  2026-07-02_MSTX_2.json  2026-07-02_NBIZ.json  2026-07-02_NKTX.json  2026-07-02_OKLL.json  (+127 more)
scripts/: agent_pr_risk.py  backup.sh  board.sh  fetch_fixtures.sh
spikes/: README.md  api_scanner_vs_mosaic.py  divergence_v1_v2.py  ibkr_news_check.py  ibkr_tradability_check.py  portfolio_cutoff_sweep.py  premarket_bar_completeness.py  review_meta_sweep.py  (+4 more)
(+169 files in other folders)
