[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "small-cap-stack"
version = "0.0.1"
description = "Automated systematic trading system for US small-cap momentum (Warrior-style), via IBKR."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "ib-async>=2.0.1",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "pytz>=2024.2",
    "pandas>=2.2",
    "APScheduler>=3.10,<4",
    "structlog>=24.1",
    "duckdb>=1.1",
    "polars>=1.0",
    "pyarrow>=17",
]

[project.scripts]
small-cap-stack = "small_cap_stack.app:run_sync"

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pandas-stubs",
    "types-pytz",
]

[tool.hatch.build.targets.wheel]
packages = ["src/small_cap_stack"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.11"
packages = ["small_cap_stack"]
mypy_path = "src"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["apscheduler.*", "ib_async.*", "duckdb.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=small_cap_stack --cov-report=term-missing"
pythonpath = ["src"]
